--- a/Visualizer/visualizer.ui
+++ b/Visualizer/visualizer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Visualizer</class>
- <widget class="QMainWindow" name="Visualizer">
+ <widget class="QWidget" name="Visualizer">
   <property name="geometry">
    <rect>
     <x>0</x>
