--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -48,7 +48,7 @@
      </widget>
     </item>
     <item row="1" column="2">
-     <widget class="QComboBox" name="comboBox">
+     <widget class="QComboBox" name="selectOpponentAlgorithmBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -73,7 +73,7 @@
      </widget>
     </item>
     <item row="0" column="2">
-     <widget class="QComboBox" name="selectAlgorithmBox">
+     <widget class="QComboBox" name="selectMyAlgorithmBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -116,7 +116,7 @@
     <item row="6" column="1">
      <widget class="QPushButton" name="goNext">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -129,7 +129,7 @@
     <item row="7" column="1">
      <widget class="QPushButton" name="goPrev">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
