--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -21,10 +21,36 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
+    <item row="5" column="1" alignment="Qt::AlignBottom">
+     <widget class="QPushButton" name="goPrev">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Prev</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="2" alignment="Qt::AlignBottom">
+     <widget class="QPushButton" name="goNext">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Next</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" alignment="Qt::AlignTop">
      <widget class="QLabel" name="label">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -47,32 +73,6 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="goNext">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Next</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="1">
-     <widget class="QPushButton" name="goPrev">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Prev</string>
-      </property>
-     </widget>
-    </item>
     <item row="3" column="2">
      <widget class="QStackedWidget" name="opponent_stackedWidget">
       <property name="sizePolicy">
@@ -87,6 +87,19 @@
       <widget class="QWidget" name="DummyAlgorithm_opponent"/>
      </widget>
     </item>
+    <item row="0" column="2" alignment="Qt::AlignTop">
+     <widget class="QLabel" name="label_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Opponent's Algorithm</string>
+      </property>
+     </widget>
+    </item>
     <item row="3" column="1">
      <widget class="QStackedWidget" name="my_stackedWidget">
       <property name="currentIndex">
@@ -98,20 +111,7 @@
       <widget class="QWidget" name="DummyAlgorithm_my"/>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="label_2">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Opponent's Algorithm</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
+    <item row="1" column="1" rowspan="2">
      <widget class="QComboBox" name="selectMyAlgorithmBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -144,7 +144,7 @@
       </item>
      </widget>
     </item>
-    <item row="1" column="2">
+    <item row="1" column="2" rowspan="2">
      <widget class="QComboBox" name="selectOpponentAlgorithmBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
