--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -304,6 +304,13 @@
       </widget>
      </widget>
     </item>
+    <item row="4" column="2">
+     <widget class="QPushButton" name="exportField">
+      <property name="text">
+       <string>ExportField</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -312,7 +319,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>18</height>
+     <height>30</height>
     </rect>
    </property>
   </widget>
