--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -288,6 +288,11 @@
         <string>CSVImport</string>
        </property>
       </item>
+      <item>
+       <property name="text">
+        <string>QRcode</string>
+       </property>
+      </item>
      </widget>
     </item>
     <item row="8" column="1">
@@ -336,7 +341,7 @@
      <x>0</x>
      <y>0</y>
      <width>928</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
