--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -276,7 +276,7 @@
       </widget>
      </widget>
     </item>
-    <item row="8" column="0">
+    <item row="9" column="0">
      <widget class="QComboBox" name="InputMethodSelect">
       <item>
        <property name="text">
@@ -290,7 +290,7 @@
       </item>
      </widget>
     </item>
-    <item row="8" column="1">
+    <item row="9" column="1">
      <widget class="QPushButton" name="goPrev">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -303,7 +303,7 @@
       </property>
      </widget>
     </item>
-    <item row="8" column="2">
+    <item row="9" column="2">
      <widget class="QPushButton" name="goNext">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -321,7 +321,14 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="2">
+    <item row="8" column="1">
+     <widget class="QPushButton" name="ExportFieldBinary">
+      <property name="text">
+       <string>ExportFieldBinary</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="2">
      <widget class="QPushButton" name="exportField">
       <property name="text">
        <string>ExportField</string>
@@ -336,7 +343,7 @@
      <x>0</x>
      <y>0</y>
      <width>928</width>
-     <height>30</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
