--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -288,6 +288,11 @@
         <string>CSVImport</string>
        </property>
       </item>
+      <item>
+       <property name="text">
+        <string>BinaryImport</string>
+       </property>
+      </item>
      </widget>
     </item>
     <item row="9" column="1">
