--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -108,13 +108,6 @@
       </property>
      </widget>
     </item>
-    <item row="10" column="2">
-     <widget class="QPushButton" name="exportField">
-      <property name="text">
-       <string>ExportField</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="2">
      <widget class="QLabel" name="label_2">
       <property name="sizePolicy">
@@ -353,6 +346,20 @@
       </property>
      </widget>
     </item>
+    <item row="11" column="1">
+     <widget class="QPushButton" name="ExportFieldBinary">
+      <property name="text">
+       <string>ExportBinaryField</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="2">
+     <widget class="QPushButton" name="exportField">
+      <property name="text">
+       <string>ExportField</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -361,7 +368,7 @@
      <x>0</x>
      <y>0</y>
      <width>928</width>
-     <height>20</height>
+     <height>30</height>
     </rect>
    </property>
   </widget>
