[add]Mejirodai側への登録とpath

--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -234,6 +234,11 @@
       </item>
       <item>
        <property name="text">
+        <string>CatchPythonsAnswer</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>DoubleAgentWithNash</string>
        </property>
       </item>
@@ -290,6 +295,11 @@
       <item>
        <property name="text">
         <string>GeneticAlgo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>CatchPythonsAnswer</string>
        </property>
       </item>
       <item>
@@ -368,7 +378,7 @@
      <x>0</x>
      <y>0</y>
      <width>928</width>
-     <height>30</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
