--- a/Visualizer/ciphercards.ui
+++ b/Visualizer/ciphercards.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="2">
     <widget class="QLabel" name="agent2Label">
@@ -57,10 +60,24 @@
     </spacer>
    </item>
    <item row="1" column="0">
-    <widget class="QWidget" name="agent1Widget" native="true"/>
+    <widget class="QWidget" name="agent1Widget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item row="1" column="2">
-    <widget class="QWidget" name="agent2Widget" native="true"/>
+    <widget class="QWidget" name="agent2Widget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
