--- a/Visualizer/operator.ui
+++ b/Visualizer/operator.ui
@@ -48,6 +48,9 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="maximum">
+      <number>150</number>
+     </property>
     </widget>
    </item>
    <item row="0" column="2">
@@ -57,6 +60,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="maximum">
+      <number>150</number>
      </property>
     </widget>
    </item>
