--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -239,6 +239,11 @@
       </item>
       <item>
        <property name="text">
+        <string>UseAbstMonteCarlo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>UseAbstractData</string>
        </property>
       </item>
@@ -300,6 +305,11 @@
       <item>
        <property name="text">
         <string>GeneticAlgo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>UseAbstMonteCarlo</string>
        </property>
       </item>
       <item>
